big move to a packagey format

--- a/cmsaloha/templates/cmsaloha/aloha.html
+++ b/cmsaloha/templates/cmsaloha/aloha.html
@@ -9,23 +9,31 @@
 <script src="{{ STATIC_URL }}cmsaloha/js/aloha.js" data-aloha-plugins="common/ui,common/format,common/highlighteditables,common/link,common/image" ></script>
 
 <script type="text/javascript">
-  Aloha.ready( function() {console.log("activate");
+  Aloha.ready( function() {
     // activate aloha on these fields:
     Aloha.jQuery('.alohaeditable').aloha();
     
-    // on click, show the save button:
-    $('form.aloha').click(function() {
-      $(this).find('input[name="save-content"]').show();
-      });
     // on clicking save, put the content of the div into an input and POST it
     $('form.aloha input[name="save-content"]').click(function () {
-      console.log("clicked");
-      var thisform = $(this).parent();
+     var thisform = $(this).parent();
       var hidden_content = thisform.find('input[name="content"]')
       hidden_content.val(thisform.find('.alohaeditable').html());
-      Aloha.jQuery.post("alohapost",$(thisform).serialize());
-      console.log("done");
+      Aloha.jQuery.post("/aloha/update/",$(thisform).serialize());
+      $(thisform).find('input[name="save-content"]').hide();
       });
+
+  // on activate, show save button
+  Aloha.bind("aloha-editable-activated", function(event,arg){
+   var thisform = $(arg.editable.obj).parent()
+   $(thisform).find('input[name="save-content"]').show();
+   });
+
+  // on deactivate, hide save button
+  Aloha.bind("aloha-editable-deactivated", function(event,arg){
+   var thisform = $(arg.editable.obj).parent()
+    $(thisform).find('input[name="save-content"]').show();
+  });
+
 });
 </script>
 
@@ -42,6 +50,7 @@
     {{ body|safe }}
   </div>
   {% csrf_token %}
+     <input type="hidden" name="id" value="{{object.id}}"/>
      <input type="submit" style="display: none" value=""/>
      <input type="button" name="save-content" style="display: none;" value="Save" />
      <input type="hidden" class="content" name="content"/>
